# Logger

./: .gitignore  CMakeLists.txt  CMakePresets.json  Logger.h  README.md  main.cpp
inc/: Logger.h
test/: TestLogger  TestLogger.cpp
test/TestLogger.dSYM/Contents/: Info.plist
test/TestLogger.dSYM/Contents/Resources/DWARF/: TestLogger
test/TestLogger.dSYM/Contents/Resources/Relocations/aarch64/: TestLogger.yml
